2013-03-09  Andy Buckley  <andy.buckley@cern.ch>

	* Fixing a symbol misnaming in ATLAS_2012_I1119557.

2013-03-08  Andy Buckley  <andy.buckley@cern.ch>

	* Protect the AIDA reader against finding XML comments.

2013-03-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ATLAS_2012_I1125575 analysis

2013-02-05  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* include/Rivet/Math/MathUtils.hh: added BWspace bin edge method
	to give equal-area Breit-Wigner bins

2013-02-01  Andy Buckley  <andy.buckley@cern.ch>

	* Adding an element to the PhiMapping enum and a new mapAngle(angle, mapping) function.

	* Fixes to Vector3::azimuthalAngle and Vector3::polarAngle calculation (using the mapAngle functions).

2013-01-25  Frank Siegert  <frank.siegert@cern.ch>

	* Split MC_*JETS analyses into three separate bits:
	MC_*INC (inclusive properties)
	MC_*JETS (jet properties)
	MC_*KTSPLITTINGS (kT splitting scales).

2013-01-22  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix TeX variable in the rivetenv scripts, especially for csh

2012-12-21  Andy Buckley  <andy.buckley@cern.ch>

	* Version 1.8.2 release!

2012-12-20  Andy Buckley  <andy.buckley@cern.ch>

	* Adding ATLAS_2012_I1119557 analysis (from Roman Lysak and Lily Asquith).

2012-12-18  Andy Buckley  <andy.buckley@cern.ch>

	* Adding TOTEM_2012_002 analysis, from Sercan Sen.

2012-12-18  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2011_I954992 analysis

2012-12-17  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2012_I1193338 analysis

	* Fixed xi cut in ATLAS_2011_I894867

2012-12-17  Andy Buckley  <andy.buckley@cern.ch>

	* Adding analysis descriptions to the HTML analysis page ToC.

2012-12-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added CMS_2012_PAS_FWD_11_003 analysis

	* Added LHCB_2012_I1119400 analysis

2012-12-12  Andy Buckley  <andy.buckley@cern.ch>

	* Correction to jet acceptance in CMS_2011_S9120041, from Sercan Sen: thanks!

2012-12-12  Hendrik Hoeth <hendrik.hoeth@cern.ch>
