@@ -1,3 +1,7 @@
+2013-03-22  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding Particle::fromDecay() method.
+
 2013-03-09  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Fixing a symbol misnaming in ATLAS_2012_I1119557.
